# saufdruck

./: .gitignore  2020-09-09 23-02-42-1.txt  all.html  build  chordpro.json  cornelius_verzeichnis.md  europa-tour.ods  europa-tour.txt  flake.nix  kein_grün.txt  paul.txt  probe.py  pyproject.toml
2019/: der_gröhl.txt  egal_sein.txt  floschit.txt  in_meine_hand.txt  kartoffel_ballade.txt  oropax.txt  pierre_michelle.txt  uniform.txt  zurücklehndiplom.txt
2020/: durst_nach_dir.txt  frei.txt  für_immer.txt  haustier.txt  ich_bin.txt  jetzt_oder_nie.txt  klopapier.txt  sauber.txt  saufdruck.txt  scheisshaufen.txt  wenn_ich_träumen_geh.txt
2021/: happy_saufdruck.txt  pogo.txt  punkx_not_dead.txt
2022/: body_neutrality.txt  eiszeit.txt  hoerma.txt  kaputte_maschine.txt  krank_priviligier.txt  make_business.txt  rosinchen.txt
ablage/: fenster_auf.txt  hausfrau.txt  kein_grün.txt  setlise_hamburg.txt
kein_anschluss/: setlist.md
songbook/: FKK.txt  abrissbagger.txt  am_tresen.txt  beziehungen.txt  bildungsfern.txt  body_neutrality.txt  das_alte_spiel_vom_unten_und_oben.txt  dein_weinen_ist_mein_schreien.txt  der_gröhl.txt  die_haeuser.txt  durst_nach_dir.txt  egal_sein.txt  eiszeit.txt  fehlerhafte_zapfanlage.txt  floschit.txt  frei.txt  fu-ball.txt  für_immer_short.txt  gefühle.txt  happy_saufdruck.txt  ich_bin.txt  in_meine_hand.txt  jammeritix.txt  kaputte_maschine.txt  klopapier.txt  krank_priviligier.txt  lass_alles_raus.txt  lauter.txt  make_business.txt  mehr.txt  musik.txt  nuesse.txt  oropax.txt  pierre_michelle.txt  pogo.txt  punkx_not_dead.txt  rakete.txt  (+12 more)
(+1 files in other folders)
