[tool.poetry]
name = "chords-und-texte"
version = "0.1.0"
description = ""
authors = ["bboger <bastianboger@posteo.de>"]
readme = "README.md"
packages = [{include = "chords_und_texte"}]

[tool.poetry.dependencies]
python = "^3.10"
simple-term-menu = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
